fix: project card too big for mobile

--- a/src/styles/_overrides.scss
+++ b/src/styles/_overrides.scss
@@ -60,7 +60,11 @@ h1, h2, h3, h4, h5, h6 {
     border-radius: 6px;
 
     margin: 12px;
-    width: 420px !important;
+    width: 420px;
+
+    @include breakpoint(extra_small_devices) {
+        width: 340px !important;
+    }
 
     animation: scale-in .7s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
 
